--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ibanexplode"
-version = "0.0.1"
+version = "0.0.2-alpha.0"
 authors = ["Bernhard Schuster <bernhard@ahoi.io>"]
 edition = "2021"
 license = "Apache-2.0 AND MIT"
